<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="hr.grubelic.nevena.musicstructure.MainActivity">

    <TextView
        android:id="@+id/playing"
        style="@style/CategoryStyle"
        android:text="@string/category_playing"/>

    <TextView
        android:id="@+id/search"
        style="@style/CategoryStyle"
        android:text="@string/category_search" />

    <TextView
        android:id="@+id/playlist"
        style="@style/CategoryStyle"
        android:text="@string/category_playlist" />

    <TextView
        android:id="@+id/albums"
        style="@style/CategoryStyle"
        android:text="@string/category_albums" />

    <TextView
        android:id="@+id/artists"
        style="@style/CategoryStyle"
        android:text="@string/category_artists" />

    <TextView
        android:id="@+id/store"
        style="@style/CategoryStyle"
        android:text="@string/category_store" />

</LinearLayout>
